--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,15 @@
 {
   "manifest_version": 2,
-  "name": "Like to Communism",
-  "version": "0.2",
-  "description": "Replaces Twitter’s “Like” button with a “Communism” button, as Twitter’s creators originally intended",
-  "icons": {
-    "128": "icon128.png",
-    "48": "icon48.png"
-  },
+  "name": "Hot take to What's up",
+  "version": "0.1",
+  "description": "Replaces \"hot take\" in tweets with \"What's up you discourse-loving fucks\" or variations thereon.",
 
   "permissions": ["https://twitter.com/*"],
 
   "content_scripts": [
     {
       "matches": ["https://twitter.com/*"],
-      "css": ["overrides.css"],
       "js": ["overrides.js"]
     }
-  ],
-
-  "web_accessible_resources": ["*.png"]
+  ]
 }
